@@ -48,7 +48,7 @@
     <jetty.version>8.1.8.v20121106</jetty.version>
     <slf4j.version>1.6.4</slf4j.version>
     <tika.version>1.2</tika.version>
-    <httpcomponents.version>4.1.3</httpcomponents.version>
+    <httpcomponents.version>4.2.3</httpcomponents.version>
 
     <!-- RandomizedTesting library system properties -->
     <tests.iters>1</tests.iters>
